--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
-    "vite": "^4.3.4"
+    "vite": "^4.3.4",
+    "vite-plugin-pwa": "^0.17.4"
   }
 }
