--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "viddocs_poc-study-updation_demo",
+  "name": "swapvid-demo",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
