--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "swapvid-demo",
   "private": true,
-  "version": "2.0.2",
+  "version": "2.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "dev-expose": "vite --host",
     "build": "tsc && vite build",
+    "generate-pwa-assets": "pwa-assets-generator",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -28,6 +29,7 @@
     "@types/react-dom": "^18.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "@vite-pwa/assets-generator": "^0.2.2",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
